objects/Library_Dup__c.object
<CustomObject>
    <fields>
        <fullName>BP_Libraries__c</fullName>
        <label>BP_Libraries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Libraries__c</fullName>
        <label>Libraries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Library_Drops</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Library Dup</label>
    <nameField>
        <displayFormat>Rec-{000}</displayFormat>
        <label>Library Dup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library Drops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>